--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     width: 500px;
     height: 250px;
     float: center;
-    font-size: 50px
+    font-size: 50px;
 }
-
+h1 {
+    font-size: 75px;
+}
